--- a/styles/style.css
+++ b/styles/style.css
@@ -13,15 +13,20 @@
  }
  main section{
    text-align: center;
+  box-sizing: border-box;
  }
  nav a{
    text-align: center;
    color: black;
    text-decoration: none;
+   padding: 35px;
  }
  
  .home-title{
    color: khaki;
+   font-family: Rock Salt, Bradley Hand, sans-serif;
+    font-size: 2em;
+    margin-top: 10px;
  }
  h4{
    color: black;
@@ -31,6 +36,14 @@
  }
  body{
     background-color: rgb(162, 182, 150);
+    background-color: #fcfbfb;
+    font-family: Raleway, Arial, sans-serif;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
+ }
+ h2{
+  margin: 0;
  }
  header{
     background-color: rgba(47, 0, 255, 0.212);
@@ -43,7 +56,11 @@
    background-color: antiquewhite;
    text-align: center;
    text-decoration: none;
+   font-size: 18px;
    color: sienna;
+   padding: 35px;
+   margin-top: 50px;
+   border-radius: 5px;
  }
  .book:hover, .join:hover{
    background-color: black;
@@ -54,15 +71,21 @@
  }
  .msg p{
    color: goldenrod;
+   padding-bottom: 15px;
  }
  #background{
    background-color: darkblue;
  }
  .msg{
    background-color: azure;
+   background-color: #6f7364;
+   line-height: 1.5em;
+   padding: 35px;
  }
  footer{
    background-color: white;
+   padding: 15px 30px;
+   margin-top: 200px;
  }
  footer a:hover{
    color: black;
@@ -75,8 +98,12 @@
  .logo{
    width: 80px;
  }
+ #logo_link{
+  padding-top: 5px;
+ }
  .icon{
    width: 80px;
+   padding-top: 10px;
  }
  #hero-img{
    width: 100%;
@@ -86,4 +113,13 @@
  }
  footer p a:hover{
    text-decoration: underline;
+ }
+ footer .social img{
+  padding-top: 15px;
+ }
+ .rivers-card, .camping-card, .rapids-card {
+  margin: 200px 0;
+ }
+ .card-img{
+  border-radius: 10px solid rgba(28, 28, 204, 0.849) ;
  }
