--- a/stainerzconcept/styles/site-plan.css
+++ b/stainerzconcept/styles/site-plan.css
@@ -1,18 +1,17 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a | */
-@import url('https://fonts.googleapis.com/css?family=IM+Fell+French+Canon+SC|Lato');
-
+@import url('https://fonts.googleapis.com/css2?family=Bona+Nova:ital@1&family=Oswald:wght@200&family=Varela+Round&display=swap');
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #396E94   ;
-  --secondary-color: #E7C24F ;
-  --accent1-color: #A42212;
-  --accent2-color: white;
+  --primary-color: #f6511d   ;
+  --secondary-color: #ffb400 ;
+  --accent1-color: #7fb800;
+  --accent2-color: #00a6ed;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: Lobster&display;
-  --paragraph-font: Lato, Helvetica, sans-serif;
+  --heading-font: Bona+Nova
+  --paragraph-font: Oswald:wght, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #396E94;  /* headlines on a white background */ 
