--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -6,13 +6,13 @@ Fonts are separated by a & */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #396E94   ;
-  --secondary-color: #E7C24F ;
-  --accent1-color: #A42212;
-  --accent2-color: white;
+  --primary-color: #ff6700   ;
+  --secondary-color: #ebebeb ;
+  --accent1-color: #c0c0c0;
+  --accent2-color: #3a6ea5;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "Explora";
+  --heading-font: Explora;
   --paragraph-font: Lobster, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
