--- a/stainerzconcept/styles/site-plan.css
+++ b/stainerzconcept/styles/site-plan.css
@@ -37,7 +37,9 @@ body {
 }
 img {
   display: block;
-  margin: 0 auto;
+  margin: 20px auto;
+  max-width: 800px;
+  max-height: 600PX;
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: var(--heading-font);
