--- a/stainerzconcept/styles/site-plan.css
+++ b/stainerzconcept/styles/site-plan.css
@@ -29,24 +29,25 @@ Fonts are separated by a | */
 /*  Look around below...but DON'T CHANGE ANYTHING! */
 
 body {
-  max-width: 1200px;
+  max-width: 1600px;
   margin: 0 auto;
   padding: 4em;
   font-size: 18px;
-  text-align: center;
+  text-align: right;
 }
 img {
-  display: block;
+  display: block-size ;
   margin: 20px auto;
-  max-width: 800px;
-  max-height: 600PX;
+  max-width: 100%;
+  max-height: fit-content;
+
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: var(--heading-font);
   color: var(--headline-color-on-white);
 }
 h2 {
-  text-align: center;
+  text-align: left;
 }
 hr {
   height: 3px;
@@ -173,4 +174,28 @@ nav a:hover {
   grid-area: right;
   border-top: 1px solid;
   border-right: 1px solid;
+}
+/* new css.file */
+.home-title{
+   color: khaki;
+   font-family: Rock Salt, Bradley Hand, sans-serif;
+    font-size: 2em;
+    margin-top: 10px;
+}
+.logo{
+  width:auto;
+  height: 100%;
+  margin-left: auto;
+  margin-right: 100%;
+}
+nav {
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
+  text-decoration: none;
+}
+.rollers{
+  width: 800px;
+  margin-left: -40%;
+
 }
