--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -47,7 +47,7 @@ main section {
 }
 
 body {
-    background-color: #12bebef5;
+    background-color: blueviolet;
     font-family:"Dancing Script";
     font-size: 2em;
     margin: 0;
