--- a/stainerzconcept/styles/stainerz.css
+++ b/stainerzconcept/styles/stainerz.css
@@ -1,10 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&family=Rock+Salt&displayfamily=Cormorant+Garamond:ital,wght@1,300&family=Dancing+Script&display=swap');
 
-
+*{
+  margin: 0px;
+  padding: 0px;
+  font-family: sans-serif;
+}
 #content{
     max-width: 1600px;
     margin: 0 auto;
     color: goldenrod;
+}
+header{
+  background-image: url(images\dream_house.jpg);
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+  min-height: 100px;
 }
 
 nav a {
